--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -35,6 +35,8 @@
     "errors": {
         "required": "Phone number needs to be filled in",
         "badFormat": "Phone number is in the wrong format"
-    }
+    },
+    "pageNotFound": "Ooops, something went wrong and the page has not been found.",
+    "backToMainPage": "Back to main page"
 }
 
